--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -36,6 +36,7 @@ jobs:
         run: pytest -s -vvvv -l --tb=long
       - name: Generate coverage report
         run: |
+          source .venv/bin/activate
           pytest --cov .
           cp .coverage ../
 
