activate venv in its own step and save to

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -30,13 +30,15 @@ jobs:
         run: |
           export POETRY_VIRTUALENVS_IN_PROJECT=true
           poetry install
-          source .venv/bin/activate
           pip install -e .[test]
+      - name: Activate virtualenv
+        run: |
+          source .venv/bin/activate
+          echo PATH=$PATH >> $GITHUB_ENV
       - name: Run tests
         run: pytest -s -vvvv -l --tb=long
       - name: Generate coverage report
         run: |
-          source .venv/bin/activate
           pytest --cov .
           cp .coverage ../
 
