--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Install project
         run: |
           export POETRY_VIRTUALENVS_IN_PROJECT=true
-          poetry install
+          poetry install --without=gpu
           pip install -e .[test]
       - name: Activate virtualenv
         run: |
