--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,13 +10,15 @@ python = "^3.12"
 mudata = "^0.2.3"
 scipy = "^1.13.0"
 seaborn = "^0.13.2"
-torch = "^2.3.0"
 ipython = "^8.24.0"
 scanpy = "^1.10.1"
 scirpy = "^0.16.1"
-scvi-tools = "^1.1.2"
 numpy = "^1.26.4"
 pandas = "^2.2.2"
+
+[tool.poetry.group.gpu.dependencies]
+scvi-tools = "^1.1.2"
+torch = "^2.3.0"
 
 [tool.poetry.group.git.dependencies]
 airr = {git = "https://github.com/airr-community/airr-standards.git", rev = "master", subdirectory = "lang/python"}
