--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ scanpy = "^1.10.1"
 scirpy = "^0.16.1"
 numpy = "^1.26.4"
 pandas = "^2.2.2"
+muon = "^0.1.6"
 biopython = "^1.84"
 
 [tool.poetry.group.gpu]
