--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,9 @@ numpy = "^1.26.4"
 pandas = "^2.2.2"
 muon = "^0.1.6"
 biopython = "^1.84"
+requests = "^2.32.3"
+requests-html = "^0.10.0"
+lxml = {extras = ["html-clean"], version = "^5.3.0"}
 
 [tool.poetry.group.gpu]
 optional = true
