--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ biopython = "^1.84"
 requests = "^2.32.3"
 requests-html = "^0.10.0"
 lxml = {extras = ["html-clean"], version = "^5.3.0"}
+joblib = "^1.4.2"
 
 [tool.poetry.group.git.dependencies]
 airr = {git = "https://github.com/airr-community/airr-standards.git", rev = "master", subdirectory = "lang/python"}
