--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,8 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.12"
+
+[tool.poetry.group.core.dependencies]
 mudata = "^0.2.3"
 scipy = "^1.13.0"
 seaborn = "^0.13.2"
@@ -23,8 +25,13 @@ requests-html = "^0.10.0"
 lxml = {extras = ["html-clean"], version = "^5.3.0"}
 joblib = "^1.4.2"
 
+[tool.poetry.group.core]
+optional = false
+
 [tool.poetry.group.git.dependencies]
 airr = {git = "https://github.com/airr-community/airr-standards.git", rev = "master", subdirectory = "lang/python"}
+[tool.poetry.group.git]
+optional = false
 
 [tool.poetry.group.dev.dependencies]
 black = {git = "https://github.com/psf/black"}
