--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,6 +2,10 @@
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
+[tool.hatch.build.targets.sdist]
+include = ["/src/pmbi",
+"/tests"]
+
 [tool.hatch.metadata]
 allow-direct-references = true
 
@@ -31,7 +35,8 @@ dependencies = [
     "requests-html>=0.10.0",
     "lxml[html-clean]>=5.3.0",
     "palettable>=3.3.3",
-    "airr@git+https://github.com/airr-community/airr-standards.git#egg=master#subdirectory=lang/python"
+    "airr@git+https://github.com/airr-community/airr-standards.git#egg=master#subdirectory=lang/python",
+    "munch>=4.0.0"
     ]
 
 [project.optional-dependencies]
