add some spatial

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ requires-python = ">=3.12"
 dependencies = [
     "mudata>=0.2.3",
     "scipy>=1.13.0",
+    "squidpy>=1.6.1",
     "seaborn>=0.13.2",
     "ipython>=8.24.0",
     "scanpy>=1.10.1",
