--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,7 +40,8 @@ dependencies = [
     "lxml[html-clean]>=5.3.0",
     "palettable>=3.3.3",
     "airr@git+https://github.com/airr-community/airr-standards.git#egg=master#subdirectory=lang/python",
-    "munch>=4.0.0"
+    "munch>=4.0.0",
+    "boto3>=1.35.66",
     ]
 
 [project.optional-dependencies]
