--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,6 +54,7 @@ gpu = [
     ]
 dev = [
     "black@git+https://github.com/psf/black#egg=master",
+    "basedpyright",
     "isort>=5.13.2",
     "debugpy>=1.8.2",
     "pytest>=8.2.2",
