--- a/snakemake/pipelines/gatk/Snakefile
+++ b/snakemake/pipelines/gatk/Snakefile
@@ -37,7 +37,7 @@ import numpy as np
 config = toml_config(workflow.source_path("config.toml"))
 # check_config_paths(config)
 
-FILES = [x for x in os.listdir("bam/input") if x.endswith(".bam")]
+FILES = [x for x in os.listdir("fastq_trimmed") if x.endswith("_trim.fastq.gz")]
 # RENAME_FILES = [re.sub(config.core.sample_key, r"\1_\2.fastq.gz", x) for x in FILES]
 
 SAMPLES = list(set([pmbi.util.get_substring(x, config.core.sample_pattern) for x in FILES]))
@@ -51,7 +51,21 @@ rule all:
         expand("gvcf/{sample}.g.vcf", sample=SAMPLES),
         expand("fig/{sample}_depth_plot.png", sample=SAMPLES),
         "combined/combined.g.vcf",
-        "combined/combined.vcf",
+        # "combined/combined.vcf",
+
+rule bwa_mem:
+    input:
+        read1="fastq_trimmed/{sample}_R1_trim.fastq.gz",
+        read2="fastq_trimmed/{sample}_R2_trim.fastq.gz",
+    output:
+        bam="bam/input/{sample}.bam"
+    params:
+        cores=config.resources.threads,
+        ref=config.core.ref,
+    run:
+        def _run(input, output, wildcards, params):
+            shell(f"bwa mem -t {params.cores} {params.ref} {input.read1} {input.read2} > {output.bam}")
+        _run(input, output, wildcards, params)
 
 rule bam_sort:
     input:
@@ -71,7 +85,7 @@ rule bam_rmdups:
     run:
         def _run(input, output, wildcards, params):
             # shell(f"samtools rmdup --output-fmt BAM {input.sortbam} {output.rmdupbam}")
-            fixm_tmp = f"bam/{wildcards.sample}_sorted.fixm.bam"
+            fixm_tmp = f"bam/process/{wildcards.sample}_sorted.fixm.bam"
             shell(f"samtools fixmate -m --output-fmt BAM {input.sortbam} {fixm_tmp}")
             shell(f"samtools sort  --output-fmt BAM {fixm_tmp} > {input.sortbam}")
             shell(f"samtools markdup -r --output-fmt BAM {input.sortbam} {output.rmdupbam}")
@@ -174,18 +188,18 @@ rule combine_gvcfs:
             variants = " ".join([f"--variant {gvcf}" for gvcf in input.gvcfs_filtered])
             shell(f"gatk --java-options \"-Xmx{params.memory}g\" CombineGVCFs -R {params.ref} {variants} -O {output.combined_gvcf}")
         _run(input, output, wildcards, params)
-        
-rule genotype_gvcf:
-    input:
-        combined_gvcf="combined/combined.g.vcf"
-    output:
-        combined_vcf="combined/{combined}.vcf",
-    params:
-        memory=config.resources.memory,
-        ref=config.core.ref,
-    run:
-        def _run(input, output, wildcards, params):
-            shell(f"gatk --java-options \"-Xmx{params.memory}g\" GenotypeGVCFs -R {params.ref} -O {output.combined_vcf} -V {input.combined_gvcf}")
-        _run(input, output, wildcards, params)
 
+# rule genotype_gvcf:
+#     input:
+#         combined_gvcf="combined/combined.g.vcf"
+#     output:
+#         combined_vcf="combined/{combined}.vcf",
+#     params:
+#         memory=config.resources.memory,
+#         ref=config.core.ref,
+#     run:
+#         def _run(input, output, wildcards, params):
+#             shell(f"gatk --java-options \"-Xmx{params.memory}g\" GenotypeGVCFs -R {params.ref} -O {output.combined_vcf} -V {input.combined_gvcf}")
+#         _run(input, output, wildcards, params)
+#
         
