--- a/snakemake/pipelines/gatk/config.toml
+++ b/snakemake/pipelines/gatk/config.toml
@@ -1,6 +1,6 @@
 [core]
 sample_pattern="(^[^_]+)[_]"
-ref="/home/amsesk/super1/cdiff_evo/ref/GCF_021378415.1_ASM2137841v1_genomic.fna"
+ref=""
 
 
 [vcf_filter]
