--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,7 +59,8 @@ dev = [
     "isort>=5.13.2",
     "debugpy>=1.8.2",
     "pytest>=8.2.2",
-    "pytest-cov>=5.0.0"
+    "pytest-cov>=5.0.0",
+    "mypy>=1.15.0"
     ]
 publish = [
     "jupyter>=1.0.0"
