dont use poetry anymore

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -23,10 +23,9 @@ jobs:
           python-version: "3.12"
       - name: Install project
         run: |
-          pip install -e .[test]
-      - name: Activate virtualenv
-        run: |
+          python -m venv .venv
           . .venv/bin/activate
+          pip install -e .[test]
           echo PATH=$PATH >> $GITHUB_ENV
       - name: Run tests
         run: pytest -s -vvvv -l --tb=long
